@@ -7,6 +7,8 @@ PHP                                                                        NEWS
 - Fixed initializing and argument checking for posix_mknod(). (Derick)
 - Fixed bug #35197 (Destructor is not called). (Tony)
 - Fixed bug #35179 (tokenizer extension needs T_HALT_COMPILER). (Greg)
+- Fixed bug #35176 (include()/require()/*_once() produce wrong error messages
+  about main()). (Dmitry)
 - Fixed bug #35142 (SOAP Client/Server Complex Object Support). (Dmitry)
 - Fixed bug #35135 (PDOStatment without related PDO object may crash). (Ilia)
 - Fixed bug #35091 (SoapClient leaks memory). (Dmitry)
